# human-condition

./: .gitignore  ARTICLE_DRAFT.md  CLAUDE.md  ETHICS.md  MASTER_PROMPT.md  README.md  README_HF.md  REAL_FINDINGS.md  SOCIAL_DRAFTS.md  app.py  app_hf.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: m_corpus_summary.sql
dbt/models/staging/: sources.sql  stg_emotions.sql  stg_topics.sql
pipeline/: 01_ingest.py  02_preprocess.py  03_embed.py  04_analyze.py  05_topics.py  06_export.py  __init__.py  run_all.py
src/human_condition/: __init__.py
src/human_condition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/human_condition/corpus/: __init__.py  builder.py  document.py  registry.py
src/human_condition/nlp/: __init__.py  embedder.py  emotion.py  preprocessor.py  turboquant_demo.py
src/human_condition/viz/: __init__.py  charts.py  theme.py
tests/: test_chart_integration.py  test_corpus.py  test_nlp.py  test_pipeline.py  test_viz.py
